Try to fix ugly overflow shaking in framed Napka maps

--- a/src/napka/src/client/map.css
+++ b/src/napka/src/client/map.css
@@ -13,9 +13,13 @@
    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <https://www.gnu.org/licenses/>. */
 
-html { height: 100%; }
+html {
+    height: 100%;
+    overflow: hidden;
+}
 body {
     height: 100%;
+    overflow: hidden;
     padding: 0;
     margin: 0;
     font-family: 'Open Sans', sans-serif;
